--- a/TourismPoint/Tourism_app/templates/home.html
+++ b/TourismPoint/Tourism_app/templates/home.html
@@ -19,7 +19,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Tour Maker - Creative Tour &amp; Travel Agency HTML Template</title>
+    <title>Tourism Point</title>
 	<link rel="shortcut icon" href="{% static 'img/favicon.png' %}" type="image/x-icon">
 
     <!-- Bootstrap Core CSS -->
@@ -151,7 +151,7 @@
 						<div class="row">
 							<div class="col-sm-12 col-md-8 col-md-offset-2">
 								<div class="caption-info-inner text-center">
-									<h1 class="animated fadeInDown">Welcome to Tour Maker</h1>
+									<h1 class="animated fadeInDown">Welcome to Tourism Point</h1>
 									<p class="animated fadeInUp">Lorem Ipsum is simply dummy text of the printing and typeseatting industry. Lorem Ipsum has been the industry's</p>
 									<a href="#packages" class="animated fadeInUp btn btn-primary page-scroll">Read More</a>
 								</div>
@@ -167,7 +167,7 @@
 						<div class="row">
 							<div class="col-sm-12 col-md-8 col-md-offset-2">
 								<div class="caption-info-inner text-center">
-									<h1 class="animated zoomIn">We make awesome tour</h1>
+									<h1 class="animated zoomIn">We make awesome Tours</h1>
 									<p class="animated zoomIn">Lorem Ipsum is simply dummy text of the printing and typeseatting industry. Lorem Ipsum has been the industry's</p>
 									<a href="#contact-us" class="animated zoomIn btn btn-primary page-scroll">Contact Us</a>
 								</div>
@@ -209,6 +209,7 @@
 				<div class="col-xs-12">
 					<div class="section-title text-center">
 						<h1>Services</h1>
+						<hr>
 					</div>
 				</div>
 			</div>
@@ -217,7 +218,7 @@
 					<div class="service-list text-center wow fadeInUp">
 						<i class="fa fa-train"></i>
 						<h3>Rail Booking</h3>
-						<p>Lorem Ipsum is simply dummy text of the printing and typeseatting industry. Lorem Ipsum has been the industry's</p>
+						<p>Book train tickets for your journey with ease.</p>
 					</div>
 				</div>
 				
@@ -225,7 +226,7 @@
 					<div class="service-list text-center wow fadeInUp">
 						<i class="fa fa-bed"></i>
 						<h3>Hotel Booking</h3>
-						<p>Lorem Ipsum is simply dummy text of the printing and typeseatting industry. Lorem Ipsum has been the industry's</p>
+						<p>Find the perfect hotel for your stay.</p>
 					</div>
 				</div>
 				
@@ -233,7 +234,7 @@
 					<div class="service-list text-center wow fadeInUp">
 						<i class="fa fa-plane"></i>
 						<h3>Flight Booking</h3>
-						<p>Lorem Ipsum is simply dummy text of the printing and typeseatting industry. Lorem Ipsum has been the industry's</p>
+						<p>Book your flights with us and travel hassle-free.</p>
 					</div>
 				</div>
 				
@@ -241,7 +242,7 @@
 					<div class="service-list text-center wow fadeInUp">
 						<i class="fa fa-ticket"></i>
 						<h3>Ticket Booking</h3>
-						<p>Lorem Ipsum is simply dummy text of the printing and typeseatting industry. Lorem Ipsum has been the industry's</p>
+						<p>Secure your tickets with ease.</p>
 					</div>
 				</div>
 				
@@ -249,15 +250,15 @@
 					<div class="service-list text-center wow fadeInUp">
 						<i class="fa fa-ship"></i>
 						<h3>Cruises Booking</h3>
-						<p>Lorem Ipsum is simply dummy text of the printing and typeseatting industry. Lorem Ipsum has been the industry's</p>
+						<p>Set sail on a memorable cruise journey.</p>
 					</div>
 				</div>
 				
 				<div class="col-xs-6 col-md-4">
 					<div class="service-list text-center wow fadeInUp">
 						<i class="fa fa-home"></i>
-						<h3>Amazing tour</h3>
-						<p>Lorem Ipsum is simply dummy text of the printing and typeseatting industry. Lorem Ipsum has been the industry's</p>
+						<h3>Tour Packages</h3>
+						<p>Explore amazing tour packages with us.</p>
 					</div>
 				</div>
 				
@@ -273,6 +274,7 @@
 				<div class="col-xs-12">
 					<div class="section-title text-center">
 						<h1>Special Packages</h1>
+						<hr>
 					</div>
 				</div>
 			</div>
@@ -330,109 +332,7 @@
 					</div>
 				</div>
 				
-				<div class="col-xs-6 col-sm-6 col-md-4">
-					<div class="package-list wow fadeInUp">
-						<a href="tour-details.html">
-							<div class="package-thumb">
-								<img src="{% static 'img/packages/3.jpg' %}" alt="" />
-								<div class="duration">
-									5 days<br/>4 nights
-								</div>
-							</div>
-							<div class="package-info">
-								<h3>Germany</h3>
-								<p>Lorem Ipsum is simply dummy text of the printing and typeseatting industry. Lorem Ipsum has been the industry's</p>
-								<span class="pull-left">
-									<i class="fa fa-star"></i>
-									<i class="fa fa-star"></i>
-									<i class="fa fa-star"></i>
-									<i class="fa fa-star"></i>
-									<i class="fa fa-star-o"></i>
-									<span class="review-count"> - 120 review</span>
-								</span>
-								<span class="pull-right price">$1300</span>
-							</div>
-						</a>
-					</div>
-				</div>
 				
-				<div class="col-xs-6 col-sm-6 col-md-4">
-					<div class="package-list wow fadeInUp">
-						<a href="tour-details.html">
-							<div class="package-thumb">
-								<img src="{% static 'img/packages/4.jpg' %}" alt="" />
-								<div class="duration">
-									5 days<br/>4 nights
-								</div>
-							</div>
-							<div class="package-info">
-								<h3>Lorem Ipsum</h3>
-								<p>Lorem Ipsum is simply dummy text of the printing and typeseatting industry. Lorem Ipsum has been the industry's</p>
-								<span class="pull-left">
-									<i class="fa fa-star"></i>
-									<i class="fa fa-star"></i>
-									<i class="fa fa-star"></i>
-									<i class="fa fa-star"></i>
-									<i class="fa fa-star"></i>
-									<span class="review-count"> - 90 review</span>
-								</span>
-								<span class="pull-right price">$1200</span>
-							</div>
-						</a>
-					</div>
-				</div>
-				
-				<div class="col-xs-6 col-sm-6 col-md-4">	
-					<div class="package-list wow fadeInUp">
-						<a href="tour-details.html">
-							<div class="package-thumb">
-								<img src="{% static 'img/packages/5.jpg' %}" alt="" />
-								<div class="duration">
-									5 days<br/>4 nights
-								</div>
-							</div>
-							<div class="package-info">
-								<h3>Lorem Ipsum</h3>
-								<p>Lorem Ipsum is simply dummy text of the printing and typeseatting industry. Lorem Ipsum has been the industry's</p>
-								<span class="pull-left">
-									<i class="fa fa-star"></i>
-									<i class="fa fa-star"></i>
-									<i class="fa fa-star"></i>
-									<i class="fa fa-star"></i>
-									<i class="fa fa-star-half-o"></i>
-									<span class="review-count"> - 160 review</span>
-								</span>
-								<span class="pull-right price">$1500</span>
-							</div>
-						</a>
-					</div>
-				</div>
-				
-				<div class="col-xs-6 col-sm-6 col-md-4">
-					<div class="package-list wow fadeInUp">
-						<a href="tour-details.html">
-							<div class="package-thumb">
-								<img src="{% static 'img/packages/6.jpg' %}" alt="" />
-								<div class="duration">
-									5 days<br/>4 nights
-								</div>
-							</div>
-							<div class="package-info">
-								<h3>Lorem Ipsum</h3>
-								<p>Lorem Ipsum is simply dummy text of the printing and typeseatting industry. Lorem Ipsum has been the industry's</p>
-								<span class="pull-left">
-									<i class="fa fa-star"></i>
-									<i class="fa fa-star"></i>
-									<i class="fa fa-star"></i>
-									<i class="fa fa-star"></i>
-									<i class="fa fa-star-o"></i>
-									<span class="review-count"> - 90 review</span>
-								</span>
-								<span class="pull-right price">$1800</span>
-							</div>
-						</a>
-					</div>
-				</div>
 			</div>
 		</div>
 	</section>
@@ -447,22 +347,22 @@
 					<ul>
 						<li>
 							<i class="fa fa-heart-o"></i>
-							<h2><span class="counter">3891</span></h2>
+							<h2><span class="counter">300</span></h2>
 							<h4>Happy Clients</h4>
 						</li>
 						<li>
 							<i class="fa fa-bed"></i>
-							<h2><span class="counter">281</span></h2>
-							<h4>Popular Hotes</h4>
+							<h2><span class="counter">30</span></h2>
+							<h4>Popular Hotels</h4>
 						</li>
 						<li>
 							<i class="fa fa-flag-checkered"></i>
-							<h2><span class="counter">618</span></h2>
+							<h2><span class="counter">50</span></h2>
 							<h4>Top Destinations</h4>
 						</li>
 						<li>
 							<i class="fa fa-ship"></i>
-							<h2><span class="counter">178</span></h2>
+							<h2><span class="counter">10</span></h2>
 							<h4>Cruises</h4>
 						</li>
 						
@@ -480,6 +380,7 @@
 				<div class="col-xs-12">
 					<div class="section-title text-center">
 						<h1>Gallery</h1>
+						<hr>
 					</div>
 				</div>
 			</div>
@@ -608,7 +509,7 @@
 	<!-- end gallery-->
 	
 	<!-- Blog Section -->
-	<section id="blog" class="inverse">
+	<!-- <section id="blog" class="inverse">
 		<div class="container">
 			<div class="row">
 				<div class="col-xs-12">
@@ -646,7 +547,7 @@
 							</div>
 							
 						</div>
-					</div><!--end post-->
+					</div><!--end post
 				</div>
 				
 				<div class="col-xs-6 col-md-4">
@@ -676,7 +577,7 @@
 							</div>
 							
 						</div>
-					</div><!--end post-->
+					</div><!--end post
 				</div>
 				
 				<div class="col-xs-6 col-md-4">
@@ -706,7 +607,7 @@
 							</div>
 							
 						</div>
-					</div><!--end post-->
+					</div><!--end post
 				</div>
 				
 				<div class="col-xs-6 col-md-4">
@@ -736,7 +637,7 @@
 							</div>
 							
 						</div>
-					</div><!--end post-->
+					</div><!--end post
 				</div>
 				
 				<div class="col-xs-6 col-md-4">
@@ -766,7 +667,7 @@
 							</div>
 							
 						</div>
-					</div><!--end post-->
+					</div><!--end post
 				</div>
 				
 				<div class="col-xs-6 col-md-4">
@@ -796,12 +697,12 @@
 							</div>
 							
 						</div>
-					</div><!--end post-->
+					</div><!--end post
 				</div>
 				
 			</div>
 		</div>
-	</section>
+	</section> -->
 	<!--end blog-->
 	
 	<!-- Testimonials Section -->
@@ -811,6 +712,7 @@
 				<div class="col-xs-12">
 					<div class="section-title text-center">
 						<h1>What our clients say?</h1>
+						<hr>
 					</div>
 				</div>
 			</div>
@@ -868,9 +770,19 @@
 
 
     
-    
+    <!--start query form-->
     <div class="container">
-        <h2>Submit a travel query</h2>
+
+		<div class="row">
+			<div class="col-xs-12">
+				<div class="section-title text-center">
+					<h1>Submit a travel query</h1>
+					<hr>
+				</div>
+			</div>
+		</div>
+
+        <!-- <h2>Submit a travel query</h2> -->
         <form method="post">
             {% csrf_token %}
             <div class="form-group">
@@ -914,7 +826,7 @@
 				</div>
 			</div>
 			<div class="row">
-				<div class="col-xs-12 col-sm-6 col-md-4">
+				<div class="col-xs-12 col-sm-6 col-md-6">
 					<div class="contact-left">
 						<ul>
 							<li>
@@ -922,7 +834,7 @@
 									<i class="fa fa-map-marker"></i>
 								</div>
 								<div class="contact-info">
-									<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor.</p>
+									<p>262, West Nakhalpara, Tejgaon, Dhaka, Bangladesh</p>
 								</div>
 							</li>
 							
@@ -931,16 +843,25 @@
 									<i class="fa fa-phone"></i>
 								</div>
 								<div class="contact-info">
-									<p>Phone:+880 1798078632<br/> Fax: 02 9635 0247</p>
+									<p>Phone:+880 1308534871</p>
 								</div>
 							</li>
+							
+							
+						</ul>
+					</div>
+				</div>
+
+				<div class="col-xs-12 col-sm-6 col-md-6">
+					<div class="contact-left">
+						<ul>
 							
 							<li>
 								<div class="icon">
 									<i class="fa fa-envelope"></i>
 								</div>
 								<div class="contact-info">
-									<p><a href="mailto:info@example.com">info@example.com</a><br/> <a href="mailto:support@example.com">support@example.com</a></p>
+									<p><a href="mailto:tourism.point19@gmail.com">tourism.point19@gmail.com</a></p>
 								</div>
 							</li>
 							
@@ -949,7 +870,7 @@
 									<i class="fa fa-clock-o"></i>
 								</div>
 								<div class="contact-info">
-									<p>Monday-Friday: 9am - 5pm <br/> Saturday: 10am - 2pm<br/> Sunday - Closed </p>
+									<p>Sunday-Thirsday: 9am - 5pm </p>
 								</div>
 							</li>
 							
@@ -957,7 +878,7 @@
 					</div>
 				</div>
 				
-				<div class="col-xs-12 col-sm-6 col-md-8">
+				<!-- <div class="col-xs-12 col-sm-6 col-md-8">
 					<div class="contact-right">
 						<form action="#" method="post">
 							<div class="row">
@@ -986,16 +907,16 @@
 							
 						</form>
 					</div>
-				</div>
+				</div> -->
 			</div>
 			
 		</div>
 	</section>
 	<!--end contact-us-->
 
-    <section id="map" class="no-padding">
+    <!-- <section id="map" class="no-padding">
 		<div class="map"></div>
-	</section>
+	</section> -->
 	
 	<footer id="footer">
 		<div class="container">
@@ -1026,7 +947,7 @@
 	</div>
 	
 	<!-- Color Switcher -->
-	<div id="color-switcher">
+	<!-- <div id="color-switcher">
 		<h2>Choose Color<a href="#"><i class="fa fa-cog fa-spin"></i></a></h2>
 		<div>
 		  <ul class="colors" id="color1">
@@ -1044,7 +965,7 @@
 			<li><a href="#" class="color12"></a></li>
 		  </ul>
 		</div>
-	 </div>
+	 </div> -->
 	 
 
     <!-- jQuery -->
