--- a/TourismPoint/Tourism_app/templates/home.html
+++ b/TourismPoint/Tourism_app/templates/home.html
@@ -20,7 +20,7 @@
     <meta name="author" content="">
 
     <title>Tourism Point</title>
-	<link rel="shortcut icon" href="{% static 'img/favicon.png' %}" type="image/x-icon">
+	<link rel="shortcut icon" href="{% static 'img/logoB_favicon.png' %}" type="image/x-icon">
 
     <!-- Bootstrap Core CSS -->
     <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
@@ -106,7 +106,7 @@
 							<span class="icon-bar"></span>
 							<span class="icon-bar"></span>
 						</button>
-						<a class="navbar-brand page-scroll" href="index-2.html"><img src="{% static 'img/logo.png' %}" alt="Logo" /></a>
+						<a class="navbar-brand page-scroll" href="index-2.html"><img src="{% static 'img/logoOG-nobg.png' %}" alt="Logo" /></a>
 					</div>
 
                     <!-- Collect the nav links, forms, and other content for toggling -->
@@ -770,48 +770,79 @@
 
 
     
-    <!--start query form-->
-    <div class="container">
-
-		<div class="row">
-			<div class="col-xs-12">
-				<div class="section-title text-center">
-					<h1>Submit a travel query</h1>
-					<hr>
-				</div>
-			</div>
-		</div>
-
-        <!-- <h2>Submit a travel query</h2> -->
-        <form method="post">
-            {% csrf_token %}
-            <div class="form-group">
-                <label for="name">Name:</label>
-                <input type="text" id="name" name="name" value="" required >
+   <!--start query form-->
+<div class="container">
+    <div class="row">
+        <div class="col-xs-12">
+            <div class="section-title text-center">
+                <h1>Submit a travel query</h1>
+                <hr>
             </div>
-            <div class="form-group">
-                <label for="phone">Phone Number:</label>
-                <input type="tel" id="phone" name="phone" value="" required>
-            </div>
-            <div class="form-group">
-                <label for="email">Email:</label>
-                <input type="email" id="email" name="email" value="" required>
-            </div>
-            <div class="form-group">
-                <label for="destination">To:</label>
-                <input type="text" id="destination" name="destination" value="" required>
-            </div>
-            <div class="form-group">
-                <label for="departure">From:</label>
-                <input type="text" id="departure" name="departure" value="" required>
-            </div>
-            <div class="form-group">
-                <label for="date_of_travel">Date of Travel:</label>
-                <input type="date" id="date_of_travel" name="date_of_travel" value="" required>
-            </div>
-            <button type="submit" class="submit-button">Submit</button>
-        </form>
+        </div>
     </div>
+    <!-- Form row 1 -->
+    <div class="row">
+        <div class="col-md-6">
+            <form method="post">
+                {% csrf_token %}
+                <div class="form-group">
+                    <label for="name">Name:</label>
+                    <input type="text" id="name" name="name" value="" required>
+                </div>
+                <div class="form-group">
+                    <label for="phone">Phone Number:</label>
+                    <input type="tel" id="phone" name="phone" value="" required>
+                </div>
+                <div class="form-group">
+                    <label for="email">Email:</label>
+                    <input type="email" id="email" name="email" value="" required>
+                </div>
+                <div class="form-group">
+                    <label for="destination">To:</label>
+                    <input type="text" id="destination" name="destination" value="" required>
+                </div>
+				<div class="form-group">
+                    <label for="departure">From:</label>
+                    <input type="text" id="departure" name="departure" value="" required>
+                </div>
+            </div>
+            <!-- Form row 2 -->
+            <div class="col-md-6">
+                
+                <div class="form-group">
+                    <label for="date_of_travel">Date of Travel:</label>
+                    <input type="date" id="date_of_travel" name="date_of_travel" value="" required>
+                </div>
+                <div class="form-group">
+                    <label for="flight">Flight:</label>
+                    <select id="flight" name="flight" required>
+                        <option value="one_way">One-way</option>
+                        <option value="round_trip">Round-trip</option>
+                    </select>
+                </div>
+                <div class="form-group">
+                    <label for="adults">Adults:</label>
+                    <input type="number" id="adults" name="adults" value="0" required>
+                </div>
+                <div class="form-group">
+                    <label for="children">Children:</label>
+                    <input type="number" id="children" name="children" value="0" required>
+                </div>
+                <div class="form-group">
+                    <label for="infants">Infants:</label>
+                    <input type="number" id="infants" name="infants" value="0" required>
+                </div>
+            </div>
+        </div>
+        <!-- Form row 3 (Submit button) -->
+        <div class="row">
+            <div class="col-xs-12 text-center">
+                <button type="submit" class="submit-button">Submit</button>
+            </div>
+        </div>
+    </form>
+</div>
+
 
 
 
@@ -870,7 +901,7 @@
 									<i class="fa fa-clock-o"></i>
 								</div>
 								<div class="contact-info">
-									<p>Sunday-Thirsday: 9am - 5pm </p>
+									<p>Sunday-Thursday: 9am - 5pm </p>
 								</div>
 							</li>
 							
@@ -912,11 +943,6 @@
 			
 		</div>
 	</section>
-	<!--end contact-us-->
-
-    <!-- <section id="map" class="no-padding">
-		<div class="map"></div>
-	</section> -->
 	
 	<footer id="footer">
 		<div class="container">
@@ -945,27 +971,6 @@
 	<div class="back-top">
 		<a href="#"><i class="fa fa-angle-up"></i></a>
 	</div>
-	
-	<!-- Color Switcher -->
-	<!-- <div id="color-switcher">
-		<h2>Choose Color<a href="#"><i class="fa fa-cog fa-spin"></i></a></h2>
-		<div>
-		  <ul class="colors" id="color1">
-			<li><a href="#" class="color1"></a></li>
-			<li><a href="#" class="color2"></a></li>
-			<li><a href="#" class="color3"></a></li>
-			<li><a href="#" class="color4"></a></li>
-			<li><a href="#" class="color5"></a></li>
-			<li><a href="#" class="color6"></a></li>
-			<li><a href="#" class="color7"></a></li>
-			<li><a href="#" class="color8"></a></li>
-			<li><a href="#" class="color9"></a></li>
-			<li><a href="#" class="color10"></a></li>
-			<li><a href="#" class="color11"></a></li>
-			<li><a href="#" class="color12"></a></li>
-		  </ul>
-		</div>
-	 </div> -->
 	 
 
     <!-- jQuery -->
