views.py updated

--- a/TourismPoint/Tourism_app/templates/tour-details.html
+++ b/TourismPoint/Tourism_app/templates/tour-details.html
@@ -10,18 +10,18 @@
     <meta name="author" content="">
 
     <title>Tour Maker - Creative Tour &amp; Travel Agency HTML Template</title>
-	<link rel="shortcut icon" href="img/favicon.png" type="image/x-icon">
+	<link rel="shortcut icon" href="{% static img/logoB_favicon.png %}" type="image/x-icon">
 
     <!-- Bootstrap Core CSS -->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link href="{% static css/bootstrap.min.css %}" rel="stylesheet">
 	<!--Datepicker-->
-	<link href="css/datepicker.css" rel="stylesheet">
+	<link href="{% static css/datepicker.css %}" rel="stylesheet">
     <!-- Animate CSS -->
-	<link href="css/animate.css" rel="stylesheet">
+	<link href="{% static css/animate.css %}" rel="stylesheet">
 	<!--Fancybox-->
-	<link href="css/jquery.fancybox.css" rel="stylesheet">
+	<link href="{% static css/jquery.fancybox.css %}" rel="stylesheet">
 	<!-- font-awesome-->
-	<link rel="stylesheet" href="fonts/font-awesome/css/font-awesome.min.css">
+	<link rel="stylesheet" href="{% static fonts/font-awesome/css/font-awesome.min.css %}">
 	<!--Owl Carousel-->
 	<link href="css/owl.carousel.css" rel="stylesheet">
 	<!--Google Fonts-->
@@ -29,10 +29,10 @@
 	<link href='https://fonts.googleapis.com/css?family=Roboto+Condensed:400,300italic,400italic,700' rel='stylesheet' type='text/css'>
 	<link href='https://fonts.googleapis.com/css?family=Dancing+Script' rel='stylesheet' type='text/css'>
 	<!-- Main CSS -->
-	<link href="style.css" rel="stylesheet">
+	<link href="{% static style.css %}" rel="stylesheet">
 	<!-- Color switcher -->
-    <link rel="stylesheet" href="css/skin/switcher.css"> 	
-    <link rel="stylesheet" href="css/skin/color-skin-name.html" id="colors"> 
+    <link rel="stylesheet" href="{% static css/skin/switcher.css %}"> 	
+    <link rel="stylesheet" href="{% static css/skin/color-skin-name.html %}" id="colors"> 
 	
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -59,7 +59,7 @@
 							<span class="icon-bar"></span>
 							<span class="icon-bar"></span>
 						</button>
-						<a class="navbar-brand page-scroll" href="index-2.html"><img src="img/logo.png" alt="Logo" /></a>
+						<a class="navbar-brand page-scroll" href="index-2.html"><img src="img/logoOG-nobg.png" alt="Logo" /></a>
 					</div>
 
 					<!-- Collect the nav links, forms, and other content for toggling -->
