--- a/TourismPoint/Tourism_app/templates/home.html
+++ b/TourismPoint/Tourism_app/templates/home.html
@@ -282,15 +282,15 @@
 			<div class="row">
 				<div class="col-xs-6 col-sm-6 col-md-4">
 					<div class="package-list wow fadeInUp">
-						<a href="tour-details.html">
+						<a href="{% url 'tour-details' %}">
 							<div class="package-thumb">
-								<img src="{% static 'img/packages/1.jpg' %}" alt="" />
+								<img src="{% static 'img/packages/dubai.jpg' %}" alt="" />
 								<div class="duration">
 									5 days<br/>4 nights
 								</div>
 							</div>
 							<div class="package-info">
-								<h3>Australia</h3>
+								<h3>Dubai</h3>
 								<p>Lorem Ipsum is simply dummy text of the printing and typeseatting industry. Lorem Ipsum has been the industry's</p>
 								<span class="pull-left">
 									<i class="fa fa-star"></i>
@@ -308,7 +308,7 @@
 				
 				<div class="col-xs-6 col-sm-6 col-md-4">	
 					<div class="package-list wow fadeInUp">
-						<a href="tour-details.html">
+						<a href="{ % url tour-details %}">
 							<div class="package-thumb">
 								<img src="{% static 'img/packages/2.jpg' %}" alt="" />
 								<div class="duration">
@@ -363,7 +363,7 @@
 						<li>
 							<i class="fa fa-ship"></i>
 							<h2><span class="counter">10</span></h2>
-							<h4>Cruises</h4>
+							<h4>Dhow Cruises</h4>
 						</li>
 						
 					</ul>
@@ -766,8 +766,6 @@
 		</div>
 	</section>
 	<!--end testimonials-->
-
-
 
     
    <!--start query form-->
