--- a/TourismPoint/Tourism_app/templates/index-2.html
+++ b/TourismPoint/Tourism_app/templates/index-2.html
@@ -10,7 +10,7 @@
     <meta name="author" content="">
 
     <title>Tour Maker - Creative Tour &amp; Travel Agency HTML Template</title>
-	<link rel="shortcut icon" href="img/favicon.png" type="image/x-icon">
+	<link rel="shortcut icon" href="{% static 'img/favicon.png' % }" type="image/x-icon">
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
