--- a/TourismPoint/static/css/style.css
+++ b/TourismPoint/static/css/style.css
@@ -31,14 +31,11 @@ Version      : 1.0
 *{
 	padding:0;
 	margin:0;
-	
 }
 img{
 	border:none;
 	outline:none;
 	max-width:100%;
-	padding: 0px 0; /* Adds 10 pixels of padding to the top and bottom, but no padding on the left and right */
-
 }
 a,a:active,a:focus,a:hover{
 	outline:none;
@@ -65,12 +62,12 @@ h1{
 	font-weight:400;
 	line-height:normal;
 	margin:0 0 15px;
-	font-family: Arial, sans-serif;
+	font-family: 'Roboto Condensed', sans-serif;
 	text-transform:uppercase;
 }
 h2{
 	font-size:25px;
-	font-family: Arial, sans-serif;
+	font-family: 'Roboto Condensed', sans-serif;
 	color:#fff;
 	font-weight:700;
 	line-height:normal;
@@ -183,7 +180,7 @@ section{
 	position:absolute;
 	left:50%;
 	top:50%;
-	background:url(img/spinner.gif) no-repeat center center;
+	background:url(img/loader.gif) no-repeat center center;
 	-webkit-transform:translate(-50%,-50%);
 	-moz-transform:translate(-50%,-50%);
 	-ms-transform:translate(-50%,-50%);
@@ -541,14 +538,8 @@ section{
 	padding-bottom:25px;
 	/* background:url(img/icon/icon.png) no-repeat center bottom; */
 }
-.section-title  hr{
-	width: 100px;
-	height: 3px;
-	margin: auto;
-	background: #C41E3A;
-}
 .section-title h1{
-	/* font-family: 'Dancing Script', cursive; */
+	font-family: 'Dancing Script', cursive;
 	margin:0 0 5px;
 	color:#000;
 }
@@ -1614,7 +1605,7 @@ blockquote{
 	text-align:center;
 }
 .back-top i {
-    background: #C41E3A none repeat scroll 0 0;
+    background: #C41E3Anone repeat scroll 0 0;
     border-radius: 50%;
     color: #fff;
     font-size: 24px;
@@ -1881,7 +1872,7 @@ h3{
 	margin:5px 0;
 }
 .navbar{
-	padding:5px 0;
+	padding:9px 0;
 	background:rgba(0, 0, 0, 0.85) none repeat scroll 0 0;
 }
 .navbar-default .navbar-nav > li > a, 
