--- a/TourismPoint/Tourism_app/templates/home.html
+++ b/TourismPoint/Tourism_app/templates/home.html
@@ -42,7 +42,7 @@
 		type='text/css'>
 	<link href='https://fonts.googleapis.com/css?family=Dancing+Script' rel='stylesheet' type='text/css'>
 	<!-- Main CSS -->
-	<link href="{% static 'css/style.css' %}" rel="stylesheet">
+	<link href="{% static 'css\style.css' %}" rel="stylesheet" type="text/css">
 	<!-- Color switcher -->
 	<link rel="stylesheet" href="{% static 'css/skin/switcher.css' %}">
 	<link rel="stylesheet" href="{% static 'css/skin/color-skin-name.html' %}" id="colors">
@@ -417,11 +417,11 @@
 		<ul class="gallery-item">
 			<li class="gallery tours hotels">
 				<div class="thumb">
-					<img src="{% static 'img/gallery/1.jpg' %}" alt="" class="img-responsive"  />
+					<img src="{% static 'img/gallery/Pic1.jpeg' %}" alt="" class="img-responsive"  />
 					<div class="gallery-overlay">
 						<div class="gallery-overlay-inner">
-							<h2>Gallery Title</h2>
-							<a href="{% static 'img/gallery/1.jpg' %}" class="fancybox"><i class="fa fa-camera"></i></a>
+							<h2>Our Customers</h2>
+							<a href="{% static 'img/gallery/Pic1.jpeg' %}" class="fancybox"><i class="fa fa-camera"></i></a>
 						</div>
 					</div>
 				</div><!--end post thumb-->
@@ -429,11 +429,11 @@
 
 			<li class="gallery flights">
 				<div class="thumb">
-					<img src="{% static 'img/gallery/2.jpg' %}" alt="" class="img-responsive" />
+					<img src="{% static 'img/gallery/Pic7.jpeg' %}" alt="" class="img-responsive" />
 					<div class="gallery-overlay">
 						<div class="gallery-overlay-inner">
-							<h2>Gallery Title</h2>
-							<a href="{% static 'img/gallery/2.jpg' %}" class="fancybox"><i class="fa fa-camera"></i></a>
+							<h2>Desert Safari</h2>
+							<a href="{% static 'img/gallery/Pic7.jpeg' %}" class="fancybox"><i class="fa fa-camera"></i></a>
 						</div>
 					</div>
 				</div><!--end post thumb-->
@@ -441,11 +441,11 @@
 
 			<li class="gallery cruises">
 				<div class="thumb">
-					<img src="{% static 'img/gallery/3.jpg' %}" alt="" class="img-responsive" />
+					<img src="{% static 'img/gallery/Pic2.jpeg' %}" alt="" class="img-responsive" />
 					<div class="gallery-overlay">
 						<div class="gallery-overlay-inner">
-							<h2>Gallery Title</h2>
-							<a href="{% static 'img/gallery/3.jpg' %}" class="fancybox"><i class="fa fa-camera"></i></a>
+							<h2>Desert Safari</h2>
+							<a href="{% static 'img/gallery/Pic2.jpeg' %}" class="fancybox"><i class="fa fa-camera"></i></a>
 						</div>
 					</div>
 				</div><!--end post thumb-->
@@ -453,11 +453,11 @@
 
 			<li class="gallery hotels">
 				<div class="thumb">
-					<img src="{% static 'img/gallery/4.jpg' %}" alt="" class="img-responsive" />
+					<img src="{% static 'img/gallery/Pic6.jpeg' %}" alt="" class="img-responsive" />
 					<div class="gallery-overlay">
 						<div class="gallery-overlay-inner">
-							<h2>Gallery Title</h2>
-							<a href="{% static 'img/gallery/4.jpg' %}" class="fancybox"><i class="fa fa-camera"></i></a>
+							<h2>Office</h2>
+							<a href="{% static 'img/gallery/Pic6.jpeg' %}" class="fancybox"><i class="fa fa-camera"></i></a>
 						</div>
 					</div>
 				</div><!--end post thumb-->
@@ -465,11 +465,11 @@
 
 			<li class="gallery tours flights">
 				<div class="thumb">
-					<img src="{% static 'img/gallery/5.jpg' %}" alt="" class="img-responsive" />
+					<img src="{% static 'img/gallery/Pic3.jpeg' %}" alt="" class="img-responsive" />
 					<div class="gallery-overlay">
 						<div class="gallery-overlay-inner">
-							<h2>Gallery Title</h2>
-							<a href="{% static 'img/gallery/5.jpg' %}" class="fancybox"><i class="fa fa-camera"></i></a>
+							<h2>Tours</h2>
+							<a href="{% static 'img/gallery/Pic3.jpeg' %}" class="fancybox"><i class="fa fa-camera"></i></a>
 						</div>
 					</div>
 				</div><!--end post thumb-->
@@ -477,11 +477,11 @@
 
 			<li class="gallery flights">
 				<div class="thumb">
-					<img src="{% static 'img/gallery/6.jpg' %}" alt="" class="img-responsive" />
+					<img src="{% static 'img/gallery/Pic5.jpeg' %}" alt="" class="img-responsive" />
 					<div class="gallery-overlay">
 						<div class="gallery-overlay-inner">
-							<h2>Gallery Title</h2>
-							<a href="{% static 'img/gallery/6.jpg' %}" class="fancybox"><i class="fa fa-camera"></i></a>
+							<h2>Gifts</h2>
+							<a href="{% static 'img/gallery/Pic5.jpeg' %}" class="fancybox"><i class="fa fa-camera"></i></a>
 						</div>
 					</div>
 				</div><!--end post thumb-->
@@ -489,11 +489,11 @@
 
 			<li class="gallery cruises">
 				<div class="thumb">
-					<img src="{% static 'img/gallery/7.jpg' %}" alt="" class="img-responsive" />
+					<img src="{% static 'img/gallery/Pic4.jpg' %}" alt="" class="img-responsive" />
 					<div class="gallery-overlay">
 						<div class="gallery-overlay-inner">
-							<h2>Gallery Title</h2>
-							<a href="{% static 'img/gallery/7.jpg' %}" class="fancybox"><i class="fa fa-camera"></i></a>
+							<h2>Tourism Expo</h2>
+							<a href="{% static 'img/gallery/Pic4.jpg' %}" class="fancybox"><i class="fa fa-camera"></i></a>
 						</div>
 					</div>
 				</div><!--end post thumb-->
@@ -501,11 +501,11 @@
 
 			<li class="gallery hotels tours">
 				<div class="thumb">
-					<img src="{% static 'img/gallery/8.jpg' %}" alt="" class="img-responsive" />
+					<img src="{% static 'img/gallery/Pic8.jpeg' %}" alt="" class="img-responsive" />
 					<div class="gallery-overlay">
 						<div class="gallery-overlay-inner">
-							<h2>Gallery Title</h2>
-							<a href="{% static 'img/gallery/8.jpg' %}" class="fancybox"><i class="fa fa-camera"></i></a>
+							<h2>Boat Tours</h2>
+							<a href="{% static 'img/gallery/Pic8.jpeg' %}" class="fancybox"><i class="fa fa-camera"></i></a>
 						</div>
 					</div>
 				</div><!--end post thumb-->
@@ -513,11 +513,11 @@
 
 			<li class="gallery cruises">
 				<div class="thumb">
-					<img src="{% static 'img/gallery/9.jpg' %}" alt="" class="img-responsive" />
+					<img src="{% static 'img/gallery/Pic9.jpg' %}" alt="" class="img-responsive" />
 					<div class="gallery-overlay">
 						<div class="gallery-overlay-inner">
-							<h2>Gallery Title</h2>
-							<a href="{% static 'img/gallery/9.jpg' %}" class="fancybox"><i class="fa fa-camera"></i></a>
+							<h2>Our Customers</h2>
+							<a href="{% static 'img/gallery/Pic9.jpg' %}" class="fancybox"><i class="fa fa-camera"></i></a>
 						</div>
 					</div>
 				</div><!--end post thumb-->
