index page updated

--- a/TourismPoint/Tourism_app/templates/index.html
+++ b/TourismPoint/Tourism_app/templates/index.html
@@ -21,7 +21,7 @@
 	<meta name="author" content="">
 
 	<title>Tourism Point</title>
-	<link rel="shortcut icon" href="{% static 'img/logoB_favicon.png' %}" type="image/x-icon">
+	<link rel="shortcut icon" href="{% static 'img/Logo.ai' %}" type="image/x-icon">
 
 	<!-- Bootstrap Core CSS -->
 	<link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
