--- a/TourismPoint/Tourism_app/templates/thankyou.html
+++ b/TourismPoint/Tourism_app/templates/thankyou.html
@@ -37,7 +37,7 @@
       <h1>Thank You for Submitting Your Query!</h1>
       <p>
         We appreciate your interest. Our team will get back to you soon.
-        <a href="{% url 'home' %}">Back to Home</a>
+        <a href="{% url 'index' %}">Back to Home</a>
       </p>
     </div>
   </body>
