--- a/TourismPoint/Tourism_app/templates/index.html
+++ b/TourismPoint/Tourism_app/templates/index.html
@@ -117,7 +117,7 @@
 							<span class="icon-bar"></span>
 						</button>
 						<a class="navbar-brand page-scroll" href="{% static 'index-2.html' %}"><img
-								src="{% static 'img/Logo.ai' %}" alt="Logo" /></a>
+								src="{% static 'img/Logo.svg' %}" alt="Logo" /></a>
 					</div>
 
 					<!-- Collect the nav links, forms, and other content for toggling -->
