--- a/TourismPoint/staticfiles/css/style.css
+++ b/TourismPoint/staticfiles/css/style.css
@@ -216,18 +216,18 @@ section{
 .navbar > .container-fluid .navbar-brand{
 	margin:0;
 	height:auto;
-	padding:11px 0;
+	padding:7px 0;
 }
 
 .navbar-brand img {
-    max-width: 150px; /* Adjust this value as needed */
+    max-width: 180px; /* Increased image size */
     height: auto; /* Maintain aspect ratio */
     display: inline-block;
     vertical-align: middle;
 }
 
 .navbar-default .navbar-nav > li{
-	margin-left:22px;
+	margin-left:19px;
 }
 .navbar-default .navbar-nav > li:first-child{
 	margin:0;
