added new packages

--- a/TourismPoint/Tourism_app/templates/tour-details.html
+++ b/TourismPoint/Tourism_app/templates/tour-details.html
@@ -10,7 +10,7 @@
     <meta name="description" content="" />
     <meta name="author" content="" />
 
-    <title>Tour Maker - Creative Tour &amp; Travel Agency HTML Template</title>
+    <title>Tourism Point</title>
     <link
       rel="shortcut icon"
       href="{% static 'img/logoB_favicon.png' %}"
