--- a/TourismPoint/Tourism_app/templates/index.html
+++ b/TourismPoint/Tourism_app/templates/index.html
@@ -296,26 +296,25 @@
 			<div class="row">
 				<div class="col-xs-6 col-sm-6 col-md-4">
 					<div class="package-list wow fadeInUp">
-						<!-- <a href="{% url 'tour-details' %}"> -->
+						<a href="{% url 'tour-details' %}">
 							<div class="package-thumb">
-								<img src="{% static 'img/packages/dubai.jpg' %}" class="img-responsive" alt="" class="img-responsive"/>
+								<img src="{% static 'img/packages/maldives.jpg' %}" class="img-responsive" alt="" class="img-responsive"/>
 								<div class="duration">
-									5 days<br />4 nights
+									4 days<br />3 nights
 								</div>
 							</div>
 							<div class="package-info">
-								<h3>Dubai</h3>
-								<p>Lorem Ipsum is simply dummy text of the printing and typeseatting industry. Lorem
-									Ipsum has been the industry's</p>
+								<h3>Maldives</h3>
+								<p>Explore the treasure island. Price starts from (per person) BDT 28,380 (Without AirFare)</p>
 								<span class="pull-left">
 									<i class="fa fa-star"></i>
 									<i class="fa fa-star"></i>
 									<i class="fa fa-star"></i>
 									<i class="fa fa-star"></i>
 									<i class="fa fa-star"></i>
-									<span class="review-count"> - 100 review</span>
+									<!-- <span class="review-count"> - 50 reviews</span> -->
 								</span>
-								<span class="pull-right price">$1400</span>
+								<span class="pull-right price">BDT 28,380</span>
 							</div>
 						</a>
 					</div>
@@ -323,26 +322,85 @@
 
 				<div class="col-xs-6 col-sm-6 col-md-4">
 					<div class="package-list wow fadeInUp">
-						<!-- <a href="{ % url tour-details %}"> -->
+						<a href="{ % url tour-details %}">
 							<div class="package-thumb">
-								<img src="{% static 'img/packages/2.jpg' %}" alt="" class="img-responsive"/>
+								<img src="{% static 'img/packages/thailand.jpg' %}" alt="" class="img-responsive"/>
 								<div class="duration">
-									5 days<br />4 nights
+									7 days<br />6 nights
 								</div>
 							</div>
 							<div class="package-info">
-								<h3>France</h3>
-								<p>Lorem Ipsum is simply dummy text of the printing and typeseatting industry. Lorem
-									Ipsum has been the industry's</p>
+								<h3>Short tour</h3>
+								<p>Short trip to Thailand, Malaysia & Singapore. Without AirFare Kuala Lumpur, Malaysia - Singapore, Singapore - Bangkok, Thailand
+									Price starts from (per person)
+									BDT 36,000
+									</p>
 								<span class="pull-left">
 									<i class="fa fa-star"></i>
 									<i class="fa fa-star"></i>
 									<i class="fa fa-star"></i>
 									<i class="fa fa-star"></i>
 									<i class="fa fa-star-half-o"></i>
-									<span class="review-count"> - 190 review</span>
+									<!-- <span class="review-count"> - 190 review</span> -->
 								</span>
-								<span class="pull-right price">$1500</span>
+								<span class="pull-right price">BDT 36,000</span>
+							</div>
+						</a>
+					</div>
+				</div>
+
+				<div class="col-xs-6 col-sm-6 col-md-4"></div>
+					<div class="package-list wow fadeInUp">
+						<a href="{ % url tour-details %}">
+							<div class="package-thumb">
+								<img src="{% static 'img/packages/cox.jpg' %}" alt="" class="img-responsive"/>
+								<div class="duration">
+									3 days<br />2 nights
+								</div>
+							</div>
+							<div class="package-info">
+								<h3>Cox's Bazar</h3>
+								<p>Experience the Largest Unbroken Sea Beach in the World
+									Price starts from (per person),BDT 5,510 (Without AirFare), Hotel Sea Crown
+									</p>
+								<span class="pull-left">
+									<i class="fa fa-star"></i>
+									<i class="fa fa-star"></i>
+									<i class="fa fa-star"></i>
+									<i class="fa fa-star"></i>
+									<i class="fa fa-star-half-o"></i>
+									<!-- <span class="review-count"> - 190 review</span> -->
+								</span>
+								<span class="pull-right price">BDT 5,510</span>
+							</div>
+						</a>
+					</div>
+				</div>
+
+
+				<div class="col-xs-6 col-sm-6 col-md-4"></div>
+					<div class="package-list wow fadeInUp">
+						<a href="{ % url tour-details %}">
+							<div class="package-thumb">
+								<img src="{% static 'img/packages/cox.jpg' %}" alt="" class="img-responsive"/>
+								<div class="duration">
+									3 days<br />2 nights
+								</div>
+							</div>
+							<div class="package-info">
+								<h3>Cox's Bazar</h3>
+								<p>Experience the Largest Unbroken Sea Beach in the World
+									Price starts from (per person),BDT 5,510 (Without AirFare), Hotel Sea Crown
+									</p>
+								<span class="pull-left">
+									<i class="fa fa-star"></i>
+									<i class="fa fa-star"></i>
+									<i class="fa fa-star"></i>
+									<i class="fa fa-star"></i>
+									<i class="fa fa-star-half-o"></i>
+									<!-- <span class="review-count"> - 190 review</span> -->
+								</span>
+								<span class="pull-right price">BDT 5,510</span>
 							</div>
 						</a>
 					</div>
@@ -364,7 +422,7 @@
 					<ul>
 						<li>
 							<i class="fa fa-heart-o"></i>
-							<h2><span class="counter">300</span></h2>
+							<h2><span class="counter">500</span></h2>
 							<h4>Happy Clients</h4>
 						</li>
 						<li>
@@ -747,20 +805,18 @@
 								Mahima Ahsan - <strong>Frequent Customer</strong>
 							</div>
 							<div class="author">
-								<img src="{% static 'img/testimonials/1.png' %}" alt="" class="img-responsive" />
+								<img src="{% static 'img/testimonials/Testi1.jpg' %}" alt="" class="img-responsive" />
 							</div>
 						</div>
 
 						<div class="testimonial-item text-center">
 							<i class="fa fa-quote-left"></i>
 							<div class="author-comments">
-								<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem
-									Ipsum has been the industry's standard dummy text ever since the 1500s, when an
-									unknown printer took a galley of type and scrambled it to make a type specimen book.
+								<p> Very professional and personalized services. 
 								</p>
 							</div>
 							<div class="designation">
-								Philip Josep - <strong>Company Name</strong>
+								Natasha Madhu - <strong></strong>
 							</div>
 							<div class="author">
 								<img src="{% static 'img/testimonials/1.png' %}" alt="" class="img-responsive" />
@@ -770,13 +826,11 @@
 						<div class="testimonial-item text-center">
 							<i class="fa fa-quote-left"></i>
 							<div class="author-comments">
-								<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem
-									Ipsum has been the industry's standard dummy text ever since the 1500s, when an
-									unknown printer took a galley of type and scrambled it to make a type specimen book.
+								<p> I always get the best deals when I choose Tourism Point 
 								</p>
 							</div>
 							<div class="designation">
-								Philip Josep - <strong>Company Name</strong>
+								Emon Sarker - <strong></strong>
 							</div>
 							<div class="author">
 								<img src="{% static 'img/testimonials/1.png' %}" alt="" class="img-responsive" />
